# Distil_XLM

./: .gitignore  README.md  distil.py  distiller.py  pyproject.toml
datasets/: test.txt  train.txt
src/: __init__.py  dataset.py  distil.py  distil_xlm.py  student_utils.py  test.ipynb  utils.py  xlm_data.py
src/models/: student.py  teacher.py
src/runners/: __init__.py  runner.py
