[tool.poetry]
name = "distil-xlm"
version = "0.1.0"
description = ""
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alchemy-catalyst = "^20.3"
catalyst = "20.6"
transformers = "^4.1.1"
reaction = "^20.2"
torch-optimizer = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
