[tool.poetry]
name = "distil-xlm"
version = "0.1.0"
description = ""
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.1.1"
torch = "^1.7.1"
pandas = "^1.2.0"
notebook = "^6.2.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
